# smartagent

./: .coveragerc  .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  dependency-review.yml  lint.yml  tests.yml
src/react_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py  tools.py  web.py
src/react_agent/tools/: __init__.py  _browser_session.py  browse.py  calculator.py  current_date.py  current_time.py  duckduckgo_search.py  python.py  read_file.py  shell.py  web_fetch.py  web_text.py  write_file.py
test/: test_agent.py  test_cli.py  test_config.py  test_tools.py
