[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "react-agent"
version = "0.1.0"
description = "ReAct agent built with LangGraph"
requires-python = ">=3.12"
dependencies = [
    "langchain",
    "langchain-core",
    "langchain-openai",
    "pyyaml",
    "rich",
    "requests",
    "beautifulsoup4",
    "ddgs",
    "fastapi>=0.135.2",
    "uvicorn>=0.42.0",
    "playwright",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
react-agent = "react_agent.cli:main"
react-agent-web = "react_agent.web:run"

[tool.pytest.ini_options]
testpaths = ["test"]
